# cee-software-comps

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/annual_report_excerpts/: ALE.WA.txt  ASE.WA.txt  BC8.DE.txt  DAVA.txt  GFT.DE.txt  GLOB.txt  HUBS.txt  KVYO.txt  REY.MI.txt  SCT.L.txt  SINCH.ST.txt  TRST.L.txt  TXT.WA.txt  VRC.WA.txt
data/llm_cache/: CompanyProfile_06d1facbdd24ecdf.json  CompanyProfile_12abe2138985b8f3.json  CompanyProfile_19ea9f4570d2aaa6.json  CompanyProfile_3d0aa9a7f99acea2.json  CompanyProfile_69ee7785cec9a943.json  CompanyProfile_6b45969d4f7191a8.json  CompanyProfile_7ae92d91568290d9.json  CompanyProfile_931104dcd4e5d9b5.json  CompanyProfile_99d907ba62dd9ed3.json  CompanyProfile_9ada65606fe211e5.json  CompanyProfile_ab4192cbd44897e0.json  CompanyProfile_c964783bc65e6c91.json  CompanyProfile_dedf8f9dfd678688.json  MarketMapCompany_079482792a72457c.json  MarketMapCompany_1b721a03596a2671.json  MarketMapCompany_256703829b62e2ce.json  MarketMapCompany_2b4ed3b0ebd2bf10.json  MarketMapCompany_5b4b50100f6572b1.json  MarketMapCompany_6fcdf738942a2f78.json  MarketMapCompany_79b50afd8f96d60c.json  MarketMapCompany_7bb6d19540dcd175.json  MarketMapCompany_9d7d5744c820c457.json  MarketMapCompany_a5209e7de22ff1cb.json  MarketMapCompany_acfc563e47fbf217.json  MarketMapCompany_c2fd70bbbbf2f7d9.json  MarketMapCompany_c76334c0ec315ffe.json  MarketMapCompany_e0e31c447ba88053.json  MarketMapCompany_e650a412f6031261.json  MarketMapCompany_f12ca46b897473cb.json  MarketMapCompany_f44945b14f28e07e.json  (+1 more)
scripts/: extract_pdf_text.py
(+29 files in other folders)
