[project]
name = "cee-software-comps"
version = "0.1.0"
description = "CEE software & IT services comp set with LLM-assisted business model classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.25.1",
    "yfinance>=1.3.0",
]

[project.scripts]
cee-comps = "cee_comps.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cee_comps"]

[dependency-groups]
dev = [
    "pymupdf>=1.27.2.3",
]
